feat: add email templates for quiz reminders, schedule reminders, and system notifications
feat: implement notification analytics API with delivery stats and system health checks

feat: create schedules API for listing, creating, updating, and deleting schedules

feat: develop student analytics API for tracking performance and progress reports

feat: add student profiles API for managing student data

feat: build Admin Notification Analytics page with KPIs and timeline visualization

feat: create Reports page for generating and downloading student progress reports

feat: implement Schedule page for managing teaching schedules with create and delete functionality

feat: develop Students page for viewing and managing student profiles